# o-complex-test-task

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2e20679cd4fc_add_searchhistorylog_model.py  d1a0aab2cd1c_add_citysearchstat_model.py
src/core/: __init__.py  config.py  db.py  templates.py
src/models/: __init__.py  base.py  search.py
src/routers/: __init__.py
src/routers/v1/: statistics.py  weather.py
src/schemas/: __init__.py  base.py  stats.py  weather.py
src/services/: search_service.py  statistics_service.py  weather_service.py
src/static/: style.css
src/templates/: index.html  search_stats_dashboard.html
src/templates/partials/: city_suggestions.html  weather_results.html
src/tests/: test_search_service.py  test_session.py  test_statistics_service.py
src/utils/: __init__.py  camel_case_to_snake_case.py  get_or_create_session_id.py  parse_recent_city_cookie.py  prepare_static_dirs.py
